--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,101 @@ ul.header-w3_pvt li span.fa {
 .header-top {
     background: #000000;
 }
+.phone_head{
+    width: 200px;
+}
+.bg_top_main{
+    background: #F2F2F2;
+    height: 45px;
+}
+.profile_title{
+    margin: 20px;
+}
+.main_content{
+    color: black;
+    margin-top: 25px;
+}
+h4{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+}
+.business_box h4{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+}
+.main_content .nav-item .nav-link{
+    color: black;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 140%;
+    align-items: center;
+}
+.main_content .nav-item .active{
+    color: #ffffff;
+    background-color: red;
+}
+.main_content .nav-item:hover a{
+    color: #ffffff;
+    background-color: red;
+
+}
+.main_content .nav .nav-item{
+    width: 100%;
+    margin: 10px;
+}
+.breadcrumb_box{
+    position: absolute;
+    bottom: -4rem;
+    left: 0;
+    right: 0;
+    height: 93px;
+    padding: 0;
+    -webkit-box-shadow: 9px -5px 9px -4px rgba(215, 215, 215, 0.8), -12px 0 8px -4px rgba(230, 230, 230, 0.8);
+    box-shadow: 9px -5px 9px -4px rgba(215, 215, 215, 0.8), -12px 0 8px -4px rgba(230, 230, 230, 0.8);
+}
+.breadcrumb_box .breadcrumb{
+    background-color: unset;
+}
+.breadcrumb_box nav{
+    float: left;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: #000000;
+}
+.breadcrumb_box .breadcrumb-item + .breadcrumb-item::before {
+    content: url("../images/chevron-right.png");
+}
+.banner_sub{
+    background-image: url("../images/banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+    height: 40vh;
+    position: relative;
+}
+.txt_h1{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    text-align: center;
+    right: 0;
+    color: #ffffff;
+}
+.txt_h1 .border_bottom_home{
+    margin: 0 auto;
+    width: 100px;
+    height: 3px;
+}
 .banner{
     background-image: url("../images/banner.png");
     background-size: cover;
@@ -223,6 +318,7 @@ ul.header-w3_pvt li span.fa {
     border-bottom: 1px solid #e6e7e8;
 }
 .abt-txt{
+    max-width: 100%;
     width: 270px;
     font-size: 14px;
     line-height: 16px;
@@ -643,7 +739,8 @@ h3.b-w3ltxt {
     text-align: right;
 }
 .map_box{
-    margin: 3rem;
+    margin: 3rem 0.6rem;
+
 }
 .footer_box{
     background: black;
@@ -1896,6 +1993,122 @@ a.move-top span{
 .text_extra{
     margin: 0.8rem 0;
 }
+/*
+Business icon css
+*/
+.h3business {
+    padding: 7px 0 21px 65px;
+    text-align: left;
+}
+.en2l{
+    margin-bottom: 15px;
+}
+.icon_box{
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -20px;
+}
+.icon_box .item_icon{
+    padding: 5px 2px;
+    background: red;
+    margin: 5px;
+    border-radius: 50%;
+    display: inline-block;
+}
+h5{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.5rem
+    line-height: 23px;
+    text-align: center;
+}
+.item_solution_box{
+    margin-bottom: 20px;
+}
+a:hover , .read_more:hover p , .footer_box_ul li:hover a{
+    color: red;
+}
+
+.box_solution{
+    position: relative;
+    margin-bottom: 20px;
+}
+.icon_box .item_icon img{
+    max-width: 60%;
+}
+.icon_box .item_icon:hover{
+    background-color: #000a91;
+}
+.read_more p{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    border-bottom: 2px solid red;
+    width: fit-content;
+    margin: 0 auto;
+    padding-top: 8px;
+}
+.community-images {
+    display: flex;
+    justify-content: center;
+    padding: 40px 0;
+}
+
+/*.community-images .col-md-3 {*/
+                             /**/
+    /*padding: 10px;*/
+    /*margin: 10px;*/
+    /*min-height: 300px;*/
+/*}*/
+#icBusiness01{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_01.gif) no-repeat 5px 5px;
+}
+#icBusiness02{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_02.gif) no-repeat 5px 5px;
+}
+#icBusiness03{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_03.gif) no-repeat 5px 5px;
+}
+#icBusiness04{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_04.gif) no-repeat 5px 5px;
+}
+#icBusiness05{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_05.gif) no-repeat 5px 5px;
+}
+#icBusiness06{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_06.gif) no-repeat 5px 5px;
+}
+#icBusiness07{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_07.gif) no-repeat 5px 5px;
+}
+#icBusiness08{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_08.gif) no-repeat 5px 5px;
+}
+#icBusiness09{
+    border-bottom: 2px solid #65dbdf;
+    background: url(../images/icon-business/ic_business_09.gif) no-repeat 5px 5px;
+}
+.business_box ul{
+    list-style: unset;
+    margin-left: 20px;
+}
+.business_item {
+    margin-bottom: 20px;
+}
 label {
     font-family: Roboto;
     font-style: normal;
@@ -1925,15 +2138,27 @@ label {
     }
 }
 @media screen and (max-width: 768px) {
-
+    .business_box h4 {
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
 @media screen and (max-width: 600px) {
     .icon_text{
         display: none!important;
     }
+    .text_extra {
+        margin: 1rem 0 3rem 0;
+    }
+    .footer_box_ul{
+        display: contents;
+        text-align: center;
+    }
 }
 @media screen and (max-width: 425px) {
-
+    .icon_box .item_icon {
+         margin: 0;
+    }
 }
 @media screen and (max-width: 375px) {
 
